--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.554.0",
     "mongoose": "^9.0.0",
-    "next": "16.0.3",
+    "next": "^16.1.3",
     "next-auth": "^4.24.13",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.66.1",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
